Acomodando y corrigiendo cosas | Ética, Lógica

--- a/4º Año/Bases de Datos/Unidad 10/5. Recuperacion de Fallos.md
+++ b/4º Año/Bases de Datos/Unidad 10/5. Recuperacion de Fallos.md
@@ -31,7 +31,7 @@ Cuando el sistema se recupera de una caída, va construyendo dos listas: _**L-re
 2. Por cada registro que se encuentre de la forma $<T_i \ Starts>$, si $T_i$ no está en _**L-redo**_, se agrega $T_i$ en la lista _**L-undo**_.
 
 Cuando se han examinado todos los registros de la bitácora posteriores al punto de verificación, se examina la lista $L$ y para cada transacción $T_i$ en $L$ que no esté en _**L-redo**_, se agrega $T_i$ a la lista _**L-undo**_.
-Una vez terminado ese proceso se vuelve a examinar la bitácora, esta vez de adelante hacia atrás, y se ejecuta $undo(T_i)$ para cada $T_i$ en _**L-undo**_. La exploración de la bitácora continúa hacia atrás hasta que se hayan localizado los registros $<T_i \ Starts>$ para todas las $T_i$ en _**L-undo**_. Por último, se examina la bitácora hacia adelante y se realiza $redo(T_i)$ para todas las $T_i$ en _**L-redo**_.
+Una vez terminado ese proceso se vuelve a examinar la bitácora de adelante hacia atrás, y se ejecuta $undo(T_i)$ para cada $T_i$ en _**L-undo**_. La exploración de la bitácora continúa hacia atrás hasta que se hayan localizado los registros $<T_i \ Starts>$ para todas las $T_i$ en _**L-redo**_. Por último, se examina la bitácora hacia adelante y se realiza $redo(T_i)$ para todas las $T_i$ en _**L-redo**_.
 >[!info] Registros de Bitácora para el Proceso de Recuperación
 >Cuando se ejecuta una operación $undo(T_i)$, en la cual se debe volver un registro $X$ a un valor antiguo $V$, se debe dejar registro de esta acción en la bitácora por lo que se crea un nuevo registro para asentar los cambios. Al completar esta operación de reversión total de la transacción se asienta en la bitácora un registro del tipo $<T_i \ Abort>$.
 >En caso de ejecutar la operación $redo(T_i)$ no hace falta asentar ningún registro nuevo en la bitácora, ya que en teoría dicha transacción ya se ha comprometido.
