--- a/4º Año/Calculo Numerico/Unidad 3/1. Sistemas de Ecuaciones no Lineales.md
+++ b/4º Año/Calculo Numerico/Unidad 3/1. Sistemas de Ecuaciones no Lineales.md
@@ -1,6 +1,6 @@
 
 ### Conceptos Básicos:
-El objetivo es encontrar valores de $x$ tales que $f(x)=0$ para una función dada $f(x)$. Las ecuaciones pueden ser algebraicas o trascendentales, dependiendo de la naturaleza de la función $f(x)$.
+El objetivo es encontrar valores de $x$ tales que $f(x)=0$ para una función arbitraria $f(x)$. Las ecuaciones pueden ser algebraicas o trascendentales, dependiendo de la naturaleza de la función $f(x)$.
 Existen diversos métodos para hallar estas raices o ceros, dentro de esos métodos encontramos:    
 
 - **Métodos Gráficos**: Se utilizan para obtener una primera aproximación visual de las raíces. Involucran graficar la función y observar los puntos donde cruza el eje $x$.
@@ -91,7 +91,7 @@ f(x_2) \\
 \end{bmatrix}
 \end{equation}
 $$
-Al resultado de esa ecuación se reemplaza los coeficientes de la ecuación cuadrática de la siguiente manera → $ax^2 + bx + c$ y se encuentran las raíces de esa ecuación se evaluan en la función original, si $f(x_a)$ es mayor que $f(x_b)$ se descarta $x_b$ y se reemplaza el punto más antiguo por ese nuevo valor y se vuelve a calcular el sistema nuevamente, y viceversa.
+Al resultado de esa ecuación se reemplaza los coeficientes de la ecuación cuadrática de la siguiente manera → $ax^2 + bx + c$ y se encuentran las raíces de esa ecuación se evaluan en la función original, si $f(x_a)$ es mayor que $f(x_b)$ se descarta $x_b$ y se reemplaza el punto más antiguo por ese nuevo valor y se vuelve a calcular el sistema nuevamente.
 
 >[!caution] Aclaración
 >Las raíces que se encuentran de la solución de la ecuación cuadrática se evaluan en la función original, no en la cuadrática
