--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
@@ -7,7 +7,7 @@ $$\theta = [(x_{k+1},w_1), (x_{k+2},w_2), ..., (x_{k+m},w_m)]$$
 >[!note] Importancia de este Paso
 >Esta substitución es un renombre de variables de manera tal que luego de aplicarla a $C_2$ ninguna de las variables que aparecen en $C_2\theta$ aparece en $C_1$. Este proceso se describe como ***separación estándar de variables***.
 
-2. Si existen un par de literales $\mathbb{L} = \{L_1, L_2, \dots, L_r\} \subseteq C_1$ y $\mathbb{M}\theta = \{\mathbb{M}_1\theta, \mathbb{M}_2\theta, \dots, \mathbb{M}_s\theta\} \subseteq C_2\theta$ tales que el conjunto constituido de la siguiente manera $\mathbb{L} \cup ¬\mathbb{M}\theta = \{L_1, L_2, \dots, L_r, ¬M_1\theta, ¬M_2\theta, \dots, ¬M_s\theta\}$ es unificable por un cuantificador más general $\rho$. En ese caso $\mathbb{L}\rho$ y $\mathbb{M}\theta\rho$ son literales complementarios, de hecho ambos son conjuntos con un solo elemento, los cuales son literales complementarios.
+2. Si existen algún par de literales $\mathbb{L} = \{L_1, L_2, \dots, L_r\} \subseteq C_1$ y $\mathbb{M}\theta = \{\mathbb{M}_1\theta, \mathbb{M}_2\theta, \dots, \mathbb{M}_s\theta\} \subseteq C_2\theta$ tales que el conjunto constituido de la siguiente manera $\mathbb{L} \cup ¬\mathbb{M}\theta = \{L_1, L_2, \dots, L_r, ¬M_1\theta, ¬M_2\theta, \dots, ¬M_s\theta\}$ es unificable por un cuantificador más general $\rho$. En ese caso $\mathbb{L}\rho$ y $\mathbb{M}\theta\rho$ son literales complementarios, de hecho ambos son conjuntos con un solo elemento, los cuales son literales complementarios.
 
 Cualquier par de cláusulas tiene a lo sumo un número finito de resolventes dado que existe solo un número finito de pares $\mathbb{L}$ y $\mathbb{M}$. Para cada uno de esos pares existe a lo sumo una substitución más general $\rho$ que los unifica. Una deducción por resolución para el cálculo de predicados se define de la misma manera que para el cálculo proposicional, con la diferencia que se reemplaza el término resolvente fija por resolvente.
 Una ***derivación por resolución*** de una cláusula $C$ a partir de un conjunto de cláusulas $S$, denominadas cláusulas input, es una secuencia de cláusulas $C_1, C_2, \dots, C_n$ tal que, $C_n$ es $C$ y para cada $i / 1 \leq i \leq n$, $C_i$ o bien es un elemento de $S$, o bien es una resolvente entre $C_m$ y $C_k$, donde $m, k < i$. La derivación es finita o infinita de acuerdo a la longitud de la secuencia, esto quiere decir que la resolución para el cálculo de predicados no es decidible.
@@ -22,7 +22,7 @@ Al comenzar a realizar el procedimiento de refutación por resolución se encont
 Los principios útiles permiten eliminar literales o cláusulas que no conducen a una refutación.
 #### Principio de Pureza
 Sea $S$ un conjunto finito de cláusulas y $L$ un literal que aparece en una cláusula $C$ en $S$ se dice puro si no existe una cláusula $D$ en $S$ que pueda utilizarse junto con $C$ para calcular una resolvente eliminando al literal $L$. Por ejemplo dado el siguiente conjunto de cláusulas $S = \{s(a) \vee r(b), ¬s(b) \vee ¬s(a), s(b)\}$, podemos afirmar que $r(b)$ es puro, ya que no puede ser eliminado por ninguna otra cláusula de $S$.
-Sea $S$ un conjunto finito de cláusulas y sea $C$ una cláusula que contiene un literal puro. Entonces la cláusula $C$ puede eliminarse de $S$ sin afectar su satisfabilidad. Es decir, $S$ es satisfacible si y solo si $S – \{ C \}$ es satisfacible.
+Sea $S$ un conjunto finito de cláusulas y sea $C$ una cláusula que contiene un literal puro. Entonces la cláusula $C$ puede eliminarse de $S$ sin afectar su satisfabilidad. Es decir, $S$ es satisfacible si y solo si $S \ – \ \{ C \}$ es satisfacible.
 #### Principio de Subsumisión
 Sea $S$ un conjunto finito de cláusulas. Una cláusula $C$ en $S$ se dice que subsume a otra cláusula $D$ de $S$, o que $D$ es subsumida por $C$, si existe una substitución $\theta$ tal que todos los literales que aparecen en $C\theta$ también aparecen en $D$. Por ejemplo, dado $C = q(x)$ y $D = q(a) \vee p(c)$, decimos que $C$ subsume a $D$ porque existe una substitución $\theta= [(a, x)]$ que hace que todos los literales de $C$ aparezcan también en $D$.
 Sea $S$ un conjunto finito de cláusulas y sea $D$ una cláusula que es subsumida por otra en $S \ – \ \{ D \}$. Entonces la cláusula $D$ puede eliminarse de $S$ sin afectar su satisfabilidad. Es decir, $S$ es satisfacible si y solo si $S \ – \ \{ D \}$ es satisfacible.
@@ -42,7 +42,7 @@ Para ver esta propiedad con más claridad supongamos que tenemos el siguiente co
 - $S_1 = \{\bot\}$ debido a que no existe ninguna otra cláusula que no contenga $A$ o $¬A$.
 - $S_2 = \{¬p(b)\}$ porque tomamos a $¬p(b)$ como $D$ y basándonos en esto se construye el segundo conjunto.
 
-En este caso no podemos afirmar nada de $S$, puesto que $S_1$ es insatisfacible mientras que $S_2$ es satisfacible. 
+En este caso no podemos afirmar nada de $S$, puesto que $S_1$ es insatisfacible mientras que $S_2$ es satisfacible.
 ### Refinamientos
 El uso de los principios útiles permite eliminar algunas cláusulas redundantes e irrelevantes que son generadas durante el procedimiento de refutación. Sin embargo, los ejemplos muestran que aun así muchas cláusulas inútiles se incluirán al aplicar el procedimiento, y estas no pueden ser eliminadas.
 Por lo tanto, resulta necesario refinar el procedimiento para lograr más eficiencia. Los refinamientos son criterios o procedimientos que sirven como guía en la búsqueda de la refutación.
