--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de datos.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/6. Proteccion de datos.md
@@ -1,32 +1,20 @@
-**Dato Personal**: Cualquier información concerniente a personas físicas identificadas o identificables.
-
-Se consideran datos personales a:
+Cuando nos referimos a **dato personal**, estamos hablando de cualquier información concerniente a personas físicas identificadas o identificables. Se consideran datos personales a:
 - **Datos de identificación**: Nombre, edad, domicilio, sexo, CUIL, CUIT, DNI, etc.
 - **Datos patrimoniales**: Cuentas bancarias, saldos, propiedades, etc.
-- **Datos de salud**: Estados de salud físico y mental.
+- **Datos de salud**: Estados de salud física y mental.
 - **Datos biométricos**: Huellas dactilares, iris, palma de la mano, etc.
 - **Otros**: Ideología, afiliación política, religión, origen étnico, preferencia sexual, etc.
 
-**Datos Públicos**: Son aquellos que determina la Ley o la constitución Política. Ejemplos: Datos relativos al estado civil de las personas, su profesión u oficio, su calidad de comerciante  o servidor publico entre otros.
-
-**Datos Privados**: Es el dato que por su naturaleza intima o reservada solo es relevante para el titular. Ejemplo: Fotografías, videos, datos relacionados con su estilo de vida entre otros.
-
-**Datos Semiprivados**: Son los datos que no tienen naturaleza intima, reservada ni publica y cuyo conocimiento o divulgación puede interesar no solo al titular sino a cierto sector o a la sociedad en general. Ejemplos: Datos financieros y crediticios, dirección, teléfono, correo electrónico, entre otros.
-
-**Datos Sensibles**: Son aquellos que pueden afectar la intimidad del titular o cuyo uso indebido puede generar discriminación. Ejemplos: Datos relativos a la salud, orientación política, sexual, las convicciones religiosas o filosóficas entre otros.
-
-**Datos Biometricos**: Son rasgos físicos, biológicos o de comportamiento de un individuo que lo individualizan en la sociedad. Ejemplos: Huellas dactilares, iris y retina, firma manuscrita, voz y ADN, entre otros.
-## Bancos de Datos Personales
-
-Conjunto organizado de datos personales, automatizado o no, independientemente del soporte, sea este físico, magnético, digital, óptico u otros que se creen, cualquiera fuere la forma o modalidad de su creación, formación, almacenamiento, organización y acceso.
-
+>[!tldr] Categorización de los Datos
+>- **Datos Públicos**: Son aquellos que determina la Ley o la constitución Política. Ejemplos: Datos relativos al estado civil de las personas, su profesión u oficio, su calidad de comerciante  o servidor público entre otros.
+>- **Datos Privados**: Es el dato que por su naturaleza intima o reservada solo es relevante para el titular. Ejemplo: Fotografías, videos, datos relacionados con su estilo de vida entre otros.
+>- **Datos Semiprivados**: Son los datos que no tienen naturaleza intima, reservada ni publica y cuyo conocimiento o divulgación puede interesar no solo al titular sino a cierto sector o a la sociedad en general. Ejemplos: Datos financieros y crediticios, dirección, teléfono, correo electrónico, entre otros.
+>- **Datos Sensibles**: Son aquellos que pueden afectar la intimidad del titular o cuyo uso indebido puede generar discriminación. Ejemplos: Datos relativos a la salud, orientación política, sexual, las convicciones religiosas o filosóficas, entre otros.
+>- **Datos Biometricos**: Son rasgos físicos, biológicos o de comportamiento de un individuo que lo individualizan en la sociedad. Ejemplos: Huellas dactilares, iris y retina, firma manuscrita, voz y ADN, entre otros.
+>- **Bancos de datos personales**: Un banco de datos personales es un conjunto organizado de datos personales, automatizado o no, independientemente del soporte, cualquiera fuere la forma o modalidad de su creación, formación, almacenamiento, organización y acceso.
 ## Tratamiento de Datos
-
-*Son las operaciones y procedimientos técnicos de carácter automatizado o no, que permitan la recogida, grabación, conservación, elaboración, modificación, bloqueo y cancelación, así como las sesiones de datos que resulten de comunicaciones, consultas, interconexiones y transferencias.*
-
-En la vida cotidiana es habitual que la persona vaya dejando una estela de datos de carácter personal en sus relaciones, de forma presencial o a distancia, con empresas, profesionales, asociaciones, fundaciones, con la Administración Pública etc.
-
-Una persona facilita datos personales cuando:
+Son las operaciones y procedimientos técnicos de carácter automatizado o no, que permitan la recogida, grabación, conservación, elaboración, modificación, bloqueo y cancelación, así como las sesiones de datos que resulten de comunicaciones, consultas, interconexiones y transferencias.
+En la vida cotidiana es habitual que la persona vaya dejando una estela de datos de carácter personal en sus relaciones, de forma presencial o a distancia, con empresas, profesionales, asociaciones, fundaciones, con la Administración Pública etc. Una persona facilita datos personales cuando:
 - Abre una cuenta en el banco
 - Se matricula en un curso
 - Reserva un hotel o un vuelo
@@ -35,14 +23,9 @@ Una persona facilita datos personales cuando:
 - Solicita un abono de transporte
 
 Siendo múltiples los rastros de datos que se dejan a menudo en todas estas gestiones.
-## Información y Aviso de Privacidad
-
+### Información y Aviso de Privacidad
 Este principio consiste en dar a conocer efectivamente a los titulares la existencia misma del tratamiento y las características esenciales de éste, en términos que les resulten fácilmente comprensibles y previo a la obtención de los datos.
-
-El “aviso de privacidad” es la herramienta que se utiliza para lograr lo anterior. Es una declaración escrita o verbal que informa al titular cómo, por qué y para qué se tratarán sus datos personales, así como los derechos que le otorga la Ley.
-
-### Contenido del Aviso de Privacidad
-
+El “*aviso de privacidad*” es la herramienta que se utiliza para lograr lo anterior. Es una declaración escrita o verbal que informa al titular cómo, por qué y para qué se tratarán sus datos personales, así como los derechos que le otorga la Ley. Los avisos de privacidad tratan los siguientes contenidos:
 - La identidad y domicilio del responsable.
 - Las finalidades del tratamiento.
 - Las opciones ofrecidas al titular para limitar el uso y divulgación de sus datos.
@@ -53,94 +36,62 @@ El “aviso de privacidad” es la herramienta que se utiliza para lograr lo ant
 - Los mecanismos para revocar el consentimiento.
 - La cláusula para aceptar o rechazar las transferencias.
 
-## Protección de Datos
-
-#### ¿A que nos referimos con protección de los datos?
-
-*Es el amparo debido a los ciudadanos contra posible utilización por terceros, en forma no autorizada de sus datos personales, susceptibles de tratamiento automatizado, para de esta forma, confeccionar una información que identificable con él, afecte a su entorno personal, social o profesional, en los límites de su intimidad.*
-
-Existen dos formas de proteger la información:
+>[!tldr] Responsabilidades ante la Recolección y Uso de Datos Personales
+>El responsable del tratamiento de datos de carácter personal es el encargado adoptar las medidas técnicas y organizativas adecuadas a los riesgos que presenta el tratamiento para garantizar la seguridad y confidencialidad de los datos personales, de modo de evitar su adulteración, pérdida, consulta o tratamiento no autorizado, que permitan detectar desviaciones, intencionales o no, de información, ya sea que los riesgos provengan de la acción humana o del medio técnico utilizado.
+### Protección de Datos
+La protección de datos es el amparo debido a los ciudadanos contra posible utilización por terceros, en forma no autorizada de sus datos personales, susceptibles de tratamiento automatizado, para de esta forma, confeccionar una información que identificable con él, afecte a su entorno personal, social o profesional, en los límites de su intimidad. Existen dos formas de proteger la información:
 - **Personal o física**.
 - **Legal**.
 
-La primera depende del sujeto dueño de la información, la segunda de los estados a través de la figura jurídica PROPIEDAD INTELECTUAL.
-
-## Organismo de Control (Habilitado desde el 2005)
-
+La primera depende del sujeto dueño de la información, la segunda de los estados a través de la figura jurídica, el mejor ejemplo de esto es la propiedad intelectual.
 La Dirección Nacional de Protección de Datos Personales es el órgano descentralizado del Ministerio de Justicia y Derechos Humanos de la Nación para el control de la Ley de Protección de Datos Personales. Ejerce las funciones encomendadas por la ley y su decreto reglamentario con plena independencia.
+Ley Nº 25.326 en la DNPDP obligan a registrar de forma obligatoria las bases de datos personales. Personas físicas o de existencia ideal, privadas que sean titulares de bases de datos personales o realicen tratamiento de información personal.
 
-### Registro Nacional de Bases de Datos Privadas
-
-Registro obligatorio de bases de datos personales dispuesto por la Ley Nº 25.326 en la DNPDP. Personas físicas o de existencia ideal privadas que sean titulares de bases de datos personales o realicen tratamiento de información personal.
-
-## Habeas Data
-
-El Hábeas data es una acción jurisdiccional, normalmente constitucional, que puede ejercer cualquier persona física o jurídica, que estuviera incluida en un registro o banco de datos de todo tipo, ya sea en instituciones públicas o privadas, en registros informáticos o no, a fin de que le sea suministrada la información existente sobre su persona, y de solicitar la eliminación o corrección si fuera falsa o estuviera desactualizada.
-
-## ¿Cuál es el Objeto de la Ley 25.326 de Protección de Datos Personales?
+>[!tldr] Habeas Data
+>El Hábeas Data es una acción jurisdiccional, normalmente constitucional, que puede ejercer cualquier persona física o jurídica, que estuviera incluida en un registro o banco de datos de todo tipo, ya sea en instituciones públicas o privadas, en registros informáticos o no, a fin de que le sea suministrada la información existente sobre su persona, y de solicitar la eliminación o corrección si fuera falsa o estuviera desactualizada.
 
 El artículo 1 de la ley 25.326 señala que la misma tiene por objeto la protección integral de los datos personales asentados en archivos, registros, bancos de datos, u otros medios técnicos de tratamiento de datos, sean éstos públicos, o privados destinados a dar informes, para garantizar el derecho al honor y a la intimidad de las personas, así como también el acceso a la información que sobre las mismas se registre, de conformidad a lo establecido en el artículo 43, párrafo tercero de la Constitución Nacional.
-
-## Requisitos Mínimos para las Bases de Datos Personales
-
-1. **Pertinencia**: Los datos deben estar relacionados con el fin perseguido en el momento de creación de la base de datos. En ningún caso se pueden utilizar los datos obtenidos para finalidades distintas de aquéllas para las que se hubieran recogido.
+#### Requisitos Mínimos para las Bases de Datos Personales
+1. **Pertinencia**: Los datos deben estar relacionados con el fin perseguido en el momento de creación de la base de datos. En ningún caso se pueden utilizar los datos obtenidos para finalidades distintas de aquellas para las que se hubieran recogido.
 2. **Finalidad**: Los datos que se obtengan deben tratarse de manera leal y lícita, y su almacenamiento debe perseguir fines concretos y legítimos.
-3. **Utilización no abusiva**: Los datos objeto de tratamiento no pueden ser utilizados para finalidades distintas o incompatibles con aquéllas que motivaron su obtención.
-4. **Exactitud**: Los datos deben ser exactos y actualizarse en el caso de que ello fuere necesario. Si fueren inexactos o incompletos, deben ser suprimidos y sustituidos, o en su caso completados.
+3. **Utilización no abusiva**: Los datos objeto de tratamiento no pueden ser utilizados para finalidades distintas o incompatibles con aquellas que motivaron su obtención.
+4. **Exactitud**: Los datos deben ser exactos y actualizarse en el caso de que ello fuere necesario. Si fueren inexactos o incompletos, deben ser suprimidos y sustituidos, o en su caso completado.
 5. **Limitación en el tiempo**: Los datos deben ser eliminados una vez que se haya cumplido la finalidad para la que fueron recabados.
 6. **Legalidad**: El procedimiento de recogida de datos no debe ser realizado en forma ilícita o desleal, no puede hacerse por medios desleales, fraudulentos o en forma contraria a las disposiciones de la ley.
 7. **Publicidad**: A través de la consulta, los ciudadanos pueden tomar conocimiento de los archivos en los cuales pueden existir datos referidos a su persona y de la identidad de los responsables de su tratamiento, para poder ejercer una defensa adecuada de sus derechos.
 8. **Seguridad**: La información personal referida a los ciudadanos debe almacenarse en archivos, registros, bancos o bases de datos que reúnan condiciones técnicas de integridad y seguridad.
 9. **Consentimiento**: El tratamiento de datos de carácter personal requiere el consentimiento libre, expreso e informado del titular de los datos.
-
-## Excepciones al Consentimiento
-
+### Excepciones al Consentimiento
 No siempre se debe obtener el consentimiento de los ciudadanos para registrar sus datos personales en un archivo, registro, banco o base de datos, existen excepciones como:
-
 - Cuando los datos se obtienen de fuentes de acceso público irrestricto.
 - Cuando los datos se recaban para el ejercicio de funciones propias de los poderes del Estado o en virtud de una obligación legal.
 - Cuando se trate de listados cuyos datos se limiten a nombre, documento nacional de identidad, identificación tributaria o previsional, ocupación, fecha de nacimiento y domicilio.
 - Cuando deriven de una relación contractual, científica o profesional del titular de los datos, y resulten necesarios para su desarrollo o cumplimiento.
 - Cuando se trate de las operaciones que realicen las entidades financieras y de las informaciones que reciban de sus clientes conforme las disposiciones del artículo 39 de la ley 21.526.
 
-## Seguridad de los Datos
-
-**¿Quién brinda la seguridad de los datos?**
-
-El responsable del tratamiento de datos de carácter personal debe adoptar las medidas técnicas y organizativas adecuadas a los riesgos que presenta el tratamiento para garantizar la seguridad y confidencialidad de los datos personales, de modo de evitar su adulteración, pérdida, consulta o tratamiento no autorizado, que permitan detectar desviaciones, intencionales o no, de información, ya sea que los riesgos provengan de la acción humana o del medio técnico utilizado.
-
 ## Sanciones por Incumplimiento de la Ley
-
-La Ley 25.326 establece dos tipos de sanciones:
+La ley 25.326 establece dos tipos de sanciones:
 - **Administrativas**.
 - **Penales**.
-
 ### Sanciones Administrativas
-
-Las sanciones administrativas que podrá aplicar la Dirección Nacional de Protección de Datos pueden ser desde un simple apercibimiento, hasta una suspensión, o bien la aplicación de multas de Pesos Un Mil ($ 1.000.-) a Pesos Cien Mil ($ 100.000.-), la clausura o cancelación del archivo, registro, banco o base de datos.
-
+Las sanciones administrativas que podrá aplicar la Dirección Nacional de Protección de Datos pueden ser desde un simple apercibimiento, hasta una suspensión, o bien la aplicación de multas que va desde los Pesos $ 1.000 a $100.000 pesos, la clausura o cancelación del archivo, registro, banco o base de datos.
 ### Sanciones Penales
-
-Para quien inserte o hiciere insertar datos falsos en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de 1 mes a 2 años. Para quien proporcione a un tercero, a sabiendas, información falsa contenida en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de entre 6 meses a 3 años.
-
-Si de alguno de estos delitos se derivara un perjuicio a alguna persona, la escala podrá aumentarse en la mitad del mínimo y del máximo, y si el autor o responsable del ilícito es un funcionario público en ejercicio de sus funciones, podrá aplicársele la accesoria de inhabilitación para el desempeño de cargos públicos por el doble de tiempo de la condena.
-
+Para quien inserte o hiciera insertar datos falsos en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de 1 mes a 2 años. Para quien proporcione a un tercero, a sabiendas, información falsa contenida en un archivo, registro, banco o base de datos personales, se establece una pena de prisión de entre 6 meses a 3 años.
+Si de alguno de estos delitos se derivara un perjuicio a alguna persona, la escala podrá aumentarse, y si el autor o responsable del ilícito es un funcionario público en ejercicio de sus funciones, podrá aplicársele la accesoria de inhabilitación para el desempeño de cargos públicos por el doble de tiempo de la condena.
 ### Clasificación de Infracciones
-
-Las infracciones se clasifican en las siguientes categorías: "Leves", "Graves" y "Muy Graves".
+Las infracciones se clasifican en las siguientes categorías: 
+- **Leves**: La infracción a este tipo de normas conlleva el pago de una multa que varía de entre los 1.000 a 3.000 pesos.
+- **Graves**: La infracción a este tipo de normas conlleva el pago de una multa que varía de entre los 3.000 a 50.000 pesos.
+- **Muy Graves**: La infracción a este tipo de normas conlleva el pago de una multa que varía de entre los 50.000 a 100.000 pesos.
 
 El Decreto 1558/2001 establece que la cuantía de las sanciones se graduará atendiendo a la naturaleza de los derechos personales afectados, el volumen de los tratamientos efectuados, a los beneficios obtenidos, al grado de intencionalidad, a la reincidencia, a los daños y perjuicios causados a las personas interesadas y a terceros, y a cualquier otra circunstancia que sea relevante para determinar el grado de antijuridicidad y de culpabilidad presentes en la concreta actuación infractora.
-
 #### Infracciones Leves
-
 - No atender, por motivos formales, la solicitud del interesado de acceso, rectificación, confidencialidad o cancelación de los datos personales objeto de tratamiento cuando legalmente proceda.
 - No proporcionar la información que solicite la Dirección Nacional de Protección de Datos Personales en el ejercicio de las competencias que tiene atribuidas, en relación con aspectos no sustantivos de la protección de datos.
 - No solicitar la inscripción de una base de datos personales pública o privada que exceda el uso personal.
 - Recoger datos de carácter personal de los propios titulares sin proporcionarles la información que señala el artículo 6° de Ley N° 25.326.
 - Incumplir el deber de secreto establecido en el artículo 10 de la Ley N° 25.326, salvo que constituya infracción grave.
-
 #### Infracciones Graves
-
 - Proceder a la creación de bases de datos de titularidad pública o recoger datos de carácter personal para las mismas, sin autorización de disposición general, publicada en el "Boletín Oficial" o diario oficial.
 - Proceder al tratamiento de datos de carácter personal que no reúnan las calidades de ciertos, adecuados, pertinentes y no excesivos en relación al ámbito y finalidad para los que se hubieren obtenido.
 - Recoger datos de carácter personal sin recabar el consentimiento libre, expreso e informado de su titular, en los casos en que éste sea exigible.
@@ -153,9 +104,7 @@ El Decreto 1558/2001 establece que la cuantía de las sanciones se graduará ate
 - La obstrucción al ejercicio de la función de inspección y fiscalización a cargo de la Dirección Nacional de Protección de Datos Personales.
 - No inscribir la base de datos de carácter personal en el Registro Nacional de Protección de Datos Personales, cuando haya sido requerido para ello por la Dirección Nacional de Protección de Datos Personales.
 - Incumplir el deber de información que se establece en los artículos 6 y 26 de la Ley N° 25.326, cuando los datos hayan sido recabados de persona distinta del afectado.
-
 #### Infracciones Muy Graves
-
 - Recoger datos de carácter personal en forma engañosa y fraudulenta.
 - La comunicación o cesión de los datos de carácter personal, fuera de los casos en que estén permitidas.
 - Recolectar y tratar los datos sensibles vulnerando los principios y garantías de la Ley N° 25.326.
@@ -164,41 +113,15 @@ El Decreto 1558/2001 establece que la cuantía de las sanciones se graduará ate
 - La vulneración del deber de guardar secreto sobre los datos sensibles, así como los que hayan sido recabados para fines policiales sin consentimiento de las personas afectadas.
 - No atender, u obstaculizar de forma sistemática el ejercicio de los derechos de acceso, rectificación, actualización, supresión o bloqueo.
 - No atender de forma sistemática el deber legal de notificación de la inclusión de datos de carácter personal en una base de datos.
-
-### Multas por Tipo de Infracción
-
-- **Infracciones leves**: De Pesos Un Mil ($ 1.000.-) a Pesos Tres Mil ($ 3.000.-).
-- **Infracciones graves**: De Pesos Tres Mil ($ 3.000.-) a Pesos Cincuenta Mil ($ 50.000.-).
-- **Infracciones muy graves**: De Pesos Cincuenta Mil ($ 50.000.-) a Pesos Cien Mil ($ 100.000.-).
-
 ## Cookies
-
-Las cookies constituyen una potente herramienta utilizada por la gran mayoría de los Web Sites y consisten en pequeños archivos de datos de texto que el servidor entrega al programa navegador que lo visita para que lo guarde en el disco rígido de esa computadora con el fin de recolectar información acerca de lo que el usuario ha estado haciendo por sus páginas.
-
-Si un Web Site utiliza cookies, su titular debe explicar claramente qué son las cookies, qué tipo de información recopilan, cuál es su objeto y cómo pueden desactivarse. De esta manera los usuarios tienen la libertad de elegir si prefieren la navegación sin cookies, de decidir si desean arriesgar una porción de su intimidad a cambio de una navegación más personalizada, o si aceptan la intromisión luego de comprobar que quienes las utilizan se ajustan a los límites impuestos por la ley.
-
+Las cookies constituyen una potente herramienta utilizada por la gran mayoría de los sitios web y consisten en pequeños archivos de datos de texto que el servidor entrega al navegador para que lo guarde en el disco rígido, todo esto con el fin de recolectar información acerca de lo que el usuario ha estado haciendo en sus páginas.
+Si un sitio web utiliza cookies, su titular debe explicar claramente qué son las cookies, qué tipo de información recopilan, cuál es su objeto y cómo pueden desactivarse. De esta manera los usuarios tienen la libertad de elegir si prefieren la navegación sin cookies, de decidir si desean arriesgar una porción de su intimidad a cambio de una navegación más personalizada, o si aceptan la intromisión luego de comprobar que quienes las utilizan se ajustan a los límites impuestos por la ley.
 ## SPAM
-
 El SPAM integra el grupo de los llamados "Abusos en el Correo Electrónico" y consiste en la técnica de enviar indiscriminadamente mensajes de correo electrónico a usuarios que no pidieron recibirlos. Su práctica trasciende los objetivos habituales del servicio y perjudica a proveedores y usuarios.
-
 Si bien generalmente se lo utiliza con fines comerciales o publicitarios, no son pocos los casos en que se lo utiliza con el fin de paralizar el servicio por saturación de las líneas, del espacio en disco o de la capacidad de procesamiento de un servidor.
-
 ### Legislación sobre SPAM
-
 La Ley 25.326 de Protección de los Datos Personales, sostiene escasos proyectos de Ley existentes sobre la materia, que en líneas generales consideran que las comunicaciones comerciales no solicitadas deben ser claramente identificadas como tales e incluir una opción automática de exclusión voluntaria de la lista de destinatarios.
-
 Aún no existe legislación nacional ni internacional que condene el SPAM. Ni siquiera el famoso y nunca sancionado Decreto S.1618, que los spammers suelen mencionar al pie de sus mensajes de correo electrónico, que no fue más que un proyecto de enmienda para el Acta de Telecomunicaciones estadounidense presentado en el año 1998, pero que nunca fue sancionada.
-
 ### Medidas contra el SPAM
-
 Los programas utilizados para filtrar automáticamente dichos mensajes disminuyen los problemas, pero no son totalmente eficientes. Los proveedores de servicios de Internet deben adoptar políticas de "tolerancia cero" respecto a los mensajes spam que envíen sus clientes y exigir el cumplimiento de las condiciones de contratación del servicio. Debe alentarse la aprobación de códigos de conducta que obliguen a las partes involucradas en el negocio a comportarse éticamente.
-
 Finalmente, la Ley 25.326 de Protección de Datos Personales es hoy por hoy la herramienta jurídica más importante que los usuarios argentinos de Internet que reciben mensajes de correo electrónico no solicitado tienen a su alcance para protegerse del SPAM.
-
-## Caso Real
-
-Una persona – suboficial de Policía– había sido adjudicatario de un crédito por la Caja de Previsión Social, pero como figuraba en su reporte de crédito que estaba siendo demandado por un banco, se le negó el crédito en la etapa final, luego de dos años de trámite.
-
-Esta persona vivía en Salta, pero el juicio era de la provincia de Chaco. Obviamente se trataba de un homónimo, pero para cuando se pudo esclarecer la situación el crédito ya se había otorgado al siguiente en la lista por orden de mérito.
-
-Es decir que la información que brindan las empresas – por lo general es cierta – pero no están exentas de cometer abusos por informes erróneos. En el afán de incorporar información, en muchas ocasiones, no se chequea correctamente la fuente y se causa perjuicios a los consumidores.
