--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
@@ -105,13 +105,7 @@ Cuando los contratos a los que se refiere el artículo anterior requieran la apr
 8. Las cláusulas abusivas pueden ser neutralizadas con la LDC.
 
 ## Contrato Electrónico
-
-Es el acuerdo de voluntades para crear o transferir derechos y obligaciones a través de medios electrónicos, ópticos o de cualquier otra tecnología. La figura de contrato electrónico como medio para la formalización de acuerdos entre partes en la economía digital, se refiere al mensaje de datos que se envía por medios electrónicos y que implica su formalización y aceptación por medios electrónicamente fiables, tales como la firma electrónica, certificado digital y firma electrónica avanzada.
-
-### Características
-
-**Contratos Celebrados a Distancia**: No hay presencia física simultánea entre las partes contratantes en el momento de suscribir el contrato.
-
-**Contratos Concluidos a través de Redes Telemáticas**: Oferta y aceptación por medios electrónicos. No hablaríamos de contrato electrónico, si la oferta no se hace por medio electrónico.
-
-**Contratación Indirecta u OFF LINE**: es aquella modalidad de comercio en Internet donde la oferta y aceptación se hace en la red, pero la entrega y/o el pago se producen fuera de la red. Ejemplos de este tipo pueden ser el comercio electrónico de productos y servicios físicos, tal y como la compra de libros a través de Internet, encargo de un servicio que se va a realizar en el domicilio o la compra de un CD que remiten al domicilio.
+Es el acuerdo de voluntades para crear o transferir derechos y obligaciones a través de medios electrónicos, ópticos o de cualquier otra tecnología. La figura de contrato electrónico como medio para la formalización de acuerdos entre partes en la economía digital, se refiere al mensaje de datos que se envía por medios electrónicos y que implica su formalización y aceptación por medios electrónicamente fiables, tales como la firma electrónica, certificado digital y firma electrónica avanzada. Este tipo de contrato posee las siguientes características:
+- **Contratos Celebrados a Distancia**: No hay presencia física simultánea entre las partes contratantes en el momento de suscribir el contrato.
+- **Contratos Concluidos a través de Redes Telemáticas**: Oferta y aceptación por medios electrónicos. No hablaríamos de contrato electrónico, si la oferta no se hace por medio electrónico.
+- **Contratación Indirecta u OFF LINE**: es aquella modalidad de comercio en Internet donde la oferta y aceptación se hace en la red, pero la entrega y/o el pago se producen fuera de la red. Ejemplos de este tipo pueden ser el comercio electrónico de productos y servicios físicos, tal y como la compra de libros a través de Internet, encargo de un servicio que se va a realizar en el domicilio o la compra de un CD que remiten al domicilio.
