--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
@@ -62,7 +62,7 @@ De este modo, pueden integrarse dentro de los objetos digitales sectores de dato
 - A las condiciones de uso, por ejemplo, sólo para ser almacenado en "bancos de datos a los efectos de distribución onerosa para uso privado..."
 - A las tarifas, por ejemplo, costo de licencia al público $ 3, comisión 35%.
 - A la cuenta de recaudación, por ejemplo, Visa No. xxxxxxx.
-### Comercio Electrónico e Impacto sobre la Propiedad Intelectual
+## Comercio Electrónico e Impacto sobre la Propiedad Intelectual
 Podemos definir al comercio electrónico como cualquier forma de transacción o intercambio de información comercial basada en la transmisión de datos sobre redes de comunicación sin que exista un contacto físico entre quien oferta un bien o un servicio y quien lo demanda.
 En nuestro país, a través de la sanción de la Ley 24.425, se aprobaron las actas finales de la Ronda Uruguay sobre Negociaciones Económicas Multilaterales que dieron origen a la Organización Mundial del Comercio (OMC).
 Esta organización ha propuesto entre sus objetivos el “*establecer un marco multilateral de principios y normas para el comercio en condiciones de transparencia y de liberalización progresiva y como medio de promover el crecimiento económico de todos los interlocutores comerciales y el desarrollo de los países*”.
@@ -79,17 +79,17 @@ Argentina suscribió también la Declaración sobre el Comercio Electrónico Mun
 >	- Definir la validez legal de las transacciones.
 >	- La dificultad de realizar pagos por un medio confiable y económico.
 >	- La resistencia de los consumidores a practicar actos mercantiles por un procedimiento que es percibido por gran parte de la población como defectuoso e inseguro.
-#### Seguridad en las Transacciones Electrónicas
+### Seguridad en las Transacciones Electrónicas
 Para procurar mayor grado de confiabilidad a las transacciones en internet, existen sistemas de seguridad desarrollados para hacer del comercio electrónico una actividad absolutamente segura.
 1. **Encriptación**: El procedimiento natural para evitar que terceros conozcan el contenido de un mensaje digital es poner el mismo en clave.
 2. **Firma Digital**: No sólo impone al documento firmado el sello de su emisor, sino que también proporciona al receptor los medios para verificar que el mensaje no fue alterado por terceros. En nuestro país, a través del Decreto 427/98, se aprobó la implementación de esta tecnología en el ámbito de la Administración Pública Nacional, tendiendo a hacer más eficientes los circuitos administrativos, para obtener documentos oficiales y celebrar actos jurídicos del mismo modo que en forma manuscrita.
 3. **Certificación**: Se realiza envolviendo la clave pública dentro de un certificado, que constituye otro mensaje en clave, otorgado por un organismo emisor o certificante de claves, o de un testigo conocido por la otra parte.
-#### Medios de Pago en las Transacciones
+### Medios de Pago en las Transacciones
 Es importante destacar que estos medios de pago electrónico deben reunir también las características que hoy reconocemos como propias del dinero tradicional, es decir, que el dinero electrónico deberá ser aceptado normalmente como moneda de cambio y no ser susceptible de venta como un bien, producto o mercancía.
 El **dinero electrónico** es una de las formas más adecuadas para llevar con adelante con efectividad el comercio electrónico. Un proveedor produce archivos electrónicos seguros cuyos billetes y monedas tienen un valor fiduciario, sin estar ligados a ninguna persona.  Un consumidor adquiere estas unidades a la entidad emisora y el comerciante las reintegra a la misma a cambio de una acreditación de dinero en su cuenta.
 Las **tarjetas de crédito anónimas**, son otro método alternativo que utilizan las organizaciones de tarjetas de crédito y de pago ya existentes, ofreciendo alternativas para aceptar cargos por medios electrónicos mediante intercambio de mensajes seguros, que impiden a terceros conocer detalles críticos sobre la cuenta del consumidor. Estos sistemas permiten respetar la confidencialidad de las transacciones utilizando criptografía, asegurar la integridad de los datos intercambiados por medio de firmas digitales, autenticar al propietario de la tarjeta, por medio de firmas digitales y certificados notariales y autenticar al comercio, también mediante firmas digitales y certificados notariales.
 Los **cheques electrónicos** es una alternativa que permite al proveedor del servicio comprometerse a transferir al comerciante los fondos que el consumidor pague mediante una fórmula electrónica.
 **Tarjetas inteligentes** a diferencia de los sistemas antes expuestos, que se basan solo en recursos de software, las tarjetas inteligentes usan una mezcla de recursos físicos y lógicos. Esta modalidad representa propiamente dinero electrónico y no es ni una tarjeta de débito ni de crédito, sino que es una tarjeta que posee un chip en cuya memoria se almacenan tanto los datos del dinero que se desea llevar en el bolsillo, como los programas de seguridad que protegen su contenido y convierten en seguras a las transacciones. El dinero se transfiere directamente al vendedor cuando se retira el producto adquirido, sin tener que acudir a una transacción en línea, ni tampoco a una costosa operación de verificación y autenticación. Simplemente constatando las computadoras, a través de un aparato de lectura incorporado a la misma, la existencia de unidades de dinero, y transfiriendo a la memoria de la computadora del comerciante las mismas, cancelando así una deuda de pago.
-#### Regulación Legal de las Operaciones Comerciales
+### Regulación Legal de las Operaciones Comerciales
 Las operaciones comerciales efectuadas a través de los medios electrónicos requerirán un marco legal para desarrollarse, dado que aún no se conoce el impacto que tendrá el dinero electrónico sobre los sistemas monetarios.
 Paralelamente, se debe considerar que la seguridad de las operaciones se relaciona con los acuerdos internacionales tendientes a aunar criterios y a armonizar la legislación comercial de los diferentes países, de modo tal que los contratos electrónicos cobren valor y se acepte el valor de la firma digital como expresión de consentimiento de las partes intervinientes en una transacción.
