--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
@@ -28,7 +28,7 @@ Dada una fórmula bien formada arbitraria existe un procedimiento para obtener u
 La transformación de una fórmula bien formada cualquiera a forma prenexa es algorítmica, puesto que existe un procedimiento efectivo que permite transformar una fórmula bien formada cualquiera en otra equivalente que se encuentra en forma prenexa. Sin embargo, todavía no logramos estar en condiciones similares a las del cálculo proposicional en términos de resolución.
 Es posible transformar la forma prenexa en una forma, llamada ***forma de Skolem con variables libres***, que solo contiene cuantificadores universales en el prefijo. El proceso de conversión de forma prenexa a forma de Skolem se describirá a continuación.
 Sea $A$ una fórmula bien formada en forma prenexa y supongamos que el prefijo de $A$ contiene un cuantificador existencial $(\exists x)$, entonces:
-1. Se reemplaza cada aparición de la variable $x$ en la matriz de $A$ por un término $sk_i(x_1, x_2, \cdots, x_n)$ donde $sk_i$ es una función n-aria que no aparece en la matriz de $A$. La lista de variables $x_1, x_2, \cdots, x_n$ está formada por las variables que aparecen en los cuantificadores universales del prefijo de $A$ que aparecen a la izquierda de $(\exists x)$.
+1. Se reemplaza cada aparición de la variable $x$ en la matriz de $A$ por un término $sk_i(x_1, x_2, \cdots, x_n)$ donde $sk_i$ es una función n-aria que no aparece en la matriz de $A$. La lista de variables $x_1, x_2, \cdots, x_n$ está formada por las variables que aparecen en los cuantificadores universales del prefijo de $A$ que se encuentran a la izquierda de $(\exists x)$.
 2. Si no aparece ningún cuantificador universal a la izquierda de $(\exists x)$ se reemplaza a la variable $x$ en la matriz de $A$ por una constante, que no pertenezca a la matriz de $A$.
 
 Este proceso se repite hasta que no queden cuantificadores existenciales en el prefijo de $A$. Por ejemplo para la siguiente fórmula en forma prenexa $(\forall x)(\exists y)(\exists z)((A(x) \vee B(y)) \wedge C(z))$ la fórmula resultante de aplicar el proceso de skolemización es la siguiente $(\forall x)((A(x) \vee B(sk_1(x)))\wedge C(sk_2(x)))$ donde $sk_1$ y $sk_2$ son términos de skolem para $y$ y $z$ respectivamente.
@@ -49,7 +49,7 @@ En la lógica proposicional, se utiliza la eliminación de literales complementa
 ### Substituciones y Unificación
 Existen descripciones de individuos que al ser substituidas en las variables hacen que pares que no son sintácticamente complementarios produzcan pares complementarios. Esto se logra utilizando una substitución particular que restrinja la especificación de los individuos en los literales que forman el par, de manera de evidenciar la forma en que serían complementarios. El proceso de encontrar descripciones adecuadas para utilizar en estas substituciones de las variables se denomina ***unificación***.
 >[!tldr] Extención del Concepto de Término
->Los términos son ***designadores*** de individuos, es decir, constantes individuales. Por definición las constantes y variables son términos, al igual que las letras funcionales, con la diferencia que estas son considerados términos compuestos porque pueden estar compuestas por varios términos.
+>Los términos son designadores de individuos, es decir, constantes individuales. Por definición las constantes y variables son términos, al igual que las letras funcionales, con la diferencia que estas son considerados términos compuestos porque pueden estar compuestas por varios términos.
 >Los ***términos fijos*** son aquellos términos que designan a un único individuo, mientras que los términos que contiene variables designan a un conjunto de individuos.
 
 Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de pares de la forma $(t_i, x_i)$, donde $x_i$ es una variable y $t_i$ es un término, además se debe cumplir que:
@@ -61,11 +61,12 @@ Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de par
 
 La manera de denotar una substitución $\sigma$ varía, ya que existen diversas formas de denotarlo, por cuestiones de practicidad la denotaremos de la siguiente manera $[(t_1, x_1),(t_2, x_2), \dots, (t_n, x_n)]$, donde cada par de componentes $(t_i, x_i)$ expresa el requerimiento de que se reemplace con el término $t_i$ cada aparición de $x_i$. Las substituciones pueden aplicarse sobre términos o fórmulas bien formadas, por lo que usaremos la palabra ***expresión*** para referirnos a estos.
 Definimos a la aplicación de una sustitución $\sigma$ a una expresión $A$ denotado como $A\sigma$, como el término o fórmula bien formada obtenida de $A$ reemplazando cada aparición de $x$ por $t$ en $A$ para cada par $(t, x)$ en $\sigma$. Obsérvese en este caso que si $\sigma$ es un conjunto vacío, la aplicación de esta substitución sobre $A$ es $A$ misma.
->[!example] Ejemplo de Aplicación de una Substitución
->Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$, denotandose de la siguiente manera:
->$$f(x,b)\sigma = f(x,b)[(a,x)] = f(a, b)$$
+Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$, denotándose de la siguiente manera:
+$$f(x,b)\sigma = f(x,b)[(a,x)] = f(a, b)$$
 
-$A$ se dice que es una ***instancia de una substitución*** de $B$ si existe una substitución $\sigma$ tal que $A = B\sigma$.
+>[!tldr] Instancia de Substitución
+>$A$ se dice que es una ***instancia de una substitución*** de $B$ si existe una substitución $\sigma$ tal que $A = B\sigma$.
+
 Sean $\sigma = [(t_1, x_1),(t_2, x_2),\dots, (t_n, x_n)]$ una substitución arbitraria y $\theta = [(s, v)]$ una substitución unitaria con la característica de que $v \neq x_i$ y $x_i$ no aparece en $s$ cualquiera sea $i$, tal que $1 \geq i \geq n$. Entonces definimos la ***composición*** de $\sigma$ y $\theta$ de la siguiente manera:
 $$\begin{align*}
 \sigma\theta &= \left[ (t_1, x_1), (t_2, x_2), \ldots, (t_n, x_n) \right] \left[ (s, v) \right] \\ &= \left[ (t_1 \left[ (s, v) \right], x_1),(t_2 \left[ (s, v) \right], x_2), \ldots,(t_n \left[ (s, v) \right], x_n),(s, v) \right]
@@ -75,18 +76,15 @@ $$\begin{align*}
 >- Sea $A$ una expresión y sean $\sigma$ y $\theta$ dos substituciones, entonces $(A\sigma)\theta = A(\sigma\theta)$.
 >- Sean $\sigma$, $\theta$ y $\mu$ tres substituciones, entonces $(\sigma\theta)\mu = \sigma(\theta\mu)$.
 ### Substituciones Unificadoras
-Sea $\mathbb{L} = \{L_1, L_2. \cdots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\mathbb{L}$ es unificado por $\theta$ si $L_1\theta = L_2\theta = \cdots = L_n\theta$. La substitución $\theta$ recibe el nombre de ***substitución unificadora*** o simplemente ***unificador***. Nótese que si $\theta$ es un unificador de $\mathbb{L}$ entonces el conjunto de $\mathbb{L} = \{L_1\theta, L_2\theta, \cdots, L_n\theta\}$ es un conjunto con un solo elemento.
-Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\theta$ es una ***substitución unificadora más general*** o ***unificadora más general*** si para cualquier otro unificador $\mu$ existe una substitución $\lambda$ tal que $\mathbb{L}\mu = \mathbb{L}\theta\lambda$.
->[!example] Ejemplo de Substitución Unificadora más General
->Supongamos que tenemos el siguiente conjunto de expresiones $\mathbb{L} = \{p(x), p(y)\}$ y tenemos los siguientes unificadores:
->1. $\mu = [(a, x), (a, y)]$.
->2. $\theta = [(x, y)]$
->
->El primer unificador unifica $\mathbb{L}\mu = \{p(a)\}$, mientras que el segundo unificador unifica $\mathbb{L}\theta = \{p(x)\}$. En este caso el segundo unificador es más general porque permite que las variables permanezcan, es decir, el término resultante es menos específico.
+Sea $\mathbb{L} = \{L_1, L_2. \dots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\mathbb{L}$ es unificado por $\theta$ si $L_1\theta = L_2\theta = \dots = L_n\theta$. La substitución $\theta$ recibe el nombre de ***substitución unificadora*** o simplemente ***unificador***. Nótese que si $\theta$ es un unificador de $\mathbb{L}$ entonces el conjunto de $\mathbb{L} = \{L_1\theta, L_2\theta, \dots, L_n\theta\}$ es un conjunto con un solo elemento.
+Sea $\mathbb{L} = \{L_1, L_2, \dots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\theta$ es una ***substitución unificadora más general*** o ***unificadora más general*** si para cualquier otro unificador $\mu$ existe una substitución $\lambda$ tal que $\mathbb{L}\mu = \mathbb{L}\theta\lambda$. Supongamos que tenemos el siguiente conjunto de expresiones $\mathbb{L} = \{p(x), p(y)\}$ y tenemos los siguientes unificadores:
+1. $\mu = [(a, x), (a, y)]$.
+2. $\theta = [(x, y)]$
 
+El primer unificador unifica $\mathbb{L}\mu = \{p(a)\}$, mientras que el segundo unificador unifica $\mathbb{L}\theta = \{p(x)\}$. En este caso el segundo unificador es más general porque permite que las variables permanezcan, es decir, el término resultante es menos específico.
 Intuitivamente, un unificador más general de un conjunto de expresiones es aquel que hace la menor cantidad y la más general de las substituciones necesarias para unificar ese conjunto de expresiones. Claramente, es posible que para un conjunto de expresiones particular no exista una substitución unificadora, sin embargo, si existiera un unificador entonces siempre es posible hallar un unificador más general.
 >[!tldr] Conjunto de Desacuerdo
->Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** $\mathcal{D}$ de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\mathcal{D} = \{z, g(y)\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
+>Sea $\mathbb{L} = \{L_1, L_2, \dots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** $\mathcal{D}$ de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\mathcal{D} = \{z, g(y)\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
 >Nótese que dado un determinado conjunto $\mathbb{L}$ de expresiones, el conjunto de desacuerdo de $\mathbb{L}$ puede ser: 
 >
 >1. El mismo conjunto, en tal caso $\mathbb{L}$ no es unificable.
