--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -1,13 +1,13 @@
 Una cláusula de programa definido (regla de computación) es una cláusula que posee la siguiente forma:
 $$A \leftarrow B_1, B_2, \dots, B_n$$
 La cual contiene exactamente un átomo en su consecuente, en este caso el literal $A$. Nótese que en este caso la cláusula en cuestión es una cláusula de Horn.
-Un programa definido es un conjunto de cláusulas de programa definido, por otro lado, una ***meta definida*** es una cláusula cuyo consecuente está vacío, es decir, no posee un consecuente:
+Un programa definido es un conjunto de cláusulas de programa definido. Por otro lado, una ***meta definida*** es una cláusula cuyo consecuente está vacío, es decir, no posee un consecuente:
 $$\leftarrow B_1, B_2, \dots, B_n$$
 Este tipo de cláusulas suelen recibir el nombre de consultas o cláusulas objetivo. En este caso también estamos en presencia de una cláusula de Horn. Estas metas definidas son equivalentes a $¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n$ y de ellas se asume que todas las variables de las cláusulas están cuantificadas universalmente:
 $$\forall(¬B_1 \vee ¬B_2 \vee \dots \vee ¬B_n)$$
-Usando la notación abreviada que da la cuantificación universal de las variables, esa expresión es equivalente a $\forall¬(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ que a su vez es equivalente a $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$.
+Usando la notación abreviada que brinda la cuantificación universal de las variables, esa expresión es equivalente a $\forall¬(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ que a su vez es equivalente a $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$.
 Los sistemas de programación lógica están basados en la regla de resolución como única regla de inferencia. Esto significa que si se trata de probar que $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de un programa $P$, se niega esa fórmula obteniendo una meta definida $\leftarrow B_1, B_2, \dots, B_n$, la cual vimos con anterioridad.
-Esta meta definida se agrega al programa $P$ y se trata de refutar el conjunto. En caso de que esto sea posible encontrar una refutación, podemos afirmar que la fórmula $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de $P$. Observemos que esta meta está representada como una conjunción de literales que puede pensarse como una conjunción de submetas.
+Esta meta definida se agrega al programa $P$ y se trata de refutar el conjunto. En caso de que sea posible encontrar una refutación, podemos afirmar que la fórmula $\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ es una consecuencia de $P$. Observemos que esta meta está representada como una conjunción de literales que puede pensarse como una conjunción de submetas.
 Dada una meta $G$ de la forma $\leftarrow B_1, B_2, \dots, B_n$, equivalente a la siguiente expresión $¬\exists(B_1 \wedge B_2 \wedge \dots \wedge B_n)$ y un programa $P$. No solo resulta interesante saber que $P \cup G$ es insatisfacible, es decir, $¬G$ es consecuencia lógica de $P$. Si no que dado un conjunto de variables $y_1, y_2, \dots, y_n$, las cuales están ligadas al resolver la consulta, es interesante obtener las instanciaciones de esas variables que permiten obtener la refutación, dado que estas representarán la respuesta del programa a la meta definida o consulta.
 ## Selección Lineal de Programas Definidos (SLD)
 Sea $G$ la meta $\leftarrow A_1, \dots, A_m, \dots, A_k$ y $C$ la cláusula $A \leftarrow B_1, \cdots, B_q$. Entonces $G'$ se derivará de $G$ y $C$ usando una substitución unificadora más general $\theta$ si se verifican las siguientes condiciones:
@@ -35,8 +35,7 @@ La raíz de este árbol es etiquetada como la meta definida $G$ y dado un nodo $
 >- **Regla de búsqueda**: Procedimiento de búsqueda de una refutación en un árbol SLD.
 >- **Procedimiento de refutación SLD**: Algoritmo de refutación SLD junto con la especificación de una regla de computación y una regla de búsqueda.
 
-Del teorema de completitud se deduce que la resolución SLD es un procedimiento completo independientemente de la elección de la regla de computación seleccionada, pero esto solo indica que existe una refutación.
-La elección de la regla de búsqueda determinará si es posible la refutación se encuentre o no, existen dos métodos de búsqueda:
+Del teorema de completitud se deduce que la resolución SLD es un procedimiento completo independientemente de la elección de la regla de computación seleccionada, pero esto solo indica que existe una refutación. La elección de la regla de búsqueda determinará si es posible la refutación se encuentre o no, existen dos métodos de búsqueda:
 - **Búsqueda a lo ancho**: Garantiza que se encontrará la rama de éxito siempre que la misma exista.
 - **Búsqueda en profundidad**: Existe la posibilidad de explorar ramas no terminantes.
 
