--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/2. Resultados Metateoricos.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/2. Resultados Metateoricos.md
@@ -1,10 +1,10 @@
 Esta unidad contendrá todos los resultados metateoricos y demostraciones de los mismos que garantizan la correctitud y completitud del cálculo de predicados.
 ## Sanidad y Completitud del Cálculo de Predicados
 Cada teorema de $\mathcal{P}$ es lógicamente válido. A partir de esta observación, se infiere que dado que cada instancia de una tautología es verdadera en cada interpretación, por lo tanto, los axiomas $PC_1$, $PC_2$, $PC_3$ son lógicamente válidos. $PC_4$ resulta lógicamente válido a partir de corolarios anteriormente expuestos, lo mismo para el axioma $PC_5$.
-En cuanto a las reglas de inferencia estas resultan válidas para Modus Ponens y generalización. Todo eso es conjunto establece que las reglas de inferencia $\mathcal{P}$ preservan la verdad y, por lo tanto, se puede concluir que $\mathcal{P}$ es sano o correcto.
+En cuanto a las reglas de inferencia estas resultan válidas para *modus ponens* y *generalización*. Todo eso en conjunto establece que las reglas de inferencia para $\mathcal{P}$ preservan la verdad y, por lo tanto, se puede concluir que $\mathcal{P}$ es sano o correcto.
 Sabiendo esto del cálculo de predicados, ahora interesa saber si la veracidad de esta teoría implica la computabilidad. Dado que el método que tenemos como esquema computacional es el procedimiento de refutación, lo que debemos mostrar es que si una fórmula bien formada es insatisfacible entonces es refutable. Si $S$ es lógicamente válido entonces $¬S$ es insatisfacible, en este caso deberíamos probar $¬S \stackrel{*}{\longrightarrow} \perp$.
-Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo o dominio de Herbrand. Entonces, si $P \subseteq \mathscr{H}_S$ entonces $\Re(P((S))) \subseteq P((\Re(S)))$. Este lema establece que la resolución de la saturación está incluida en la saturación de la resolución. Se puede verificar que $\Re^n(P((S))) \subseteq P((\Re^n(S)))$ se cumple aplicando inducción.
-Sea $S$ un conjunto de cláusulas. Si $S$ es insatisfacible entonces $\perp \in \Re^n(S)$ para algún $n$, es decir si $\vDash ¬S$ entonces $\perp \in \Re^n(S)$. Esto se puede demostrar suponiendo que $S$ es insatisfacible, en ese caso existe un subconjunto finito $H$ de $\mathscr{H}_S$ que es insatisfacible. Este $H$ al ser un subconjunto de la saturación de $S$ por $\mathscr{H}_S$ está conformado por fórmulas bien formadas de $S$ saturadas con términos fijos de $\mathscr{H}_S$.  Sea $P$ dicho subconjunto de $\mathscr{H}_S$, entonces la saturación de $S$ sobre $P$ incluye a $H$ y por esta razón es también inconsistente.
+Sea $S$ un conjunto de cláusulas y $\mathscr{H}_S$ su universo o dominio de Herbrand. Entonces, si $P \subseteq \mathscr{H}_S$ se cumple la siguiente que $\Re(P((S))) \subseteq P((\Re(S)))$. Este lema establece que la resolución de la saturación está incluida en la saturación de la resolución. Se puede verificar que $\Re^n(P((S))) \subseteq P((\Re^n(S)))$ se cumple aplicando inducción.
+Sea $S$ un conjunto de cláusulas. Si $S$ es insatisfacible entonces $\perp \in \Re^n(S)$ para algún $n$, es decir si $\vDash ¬S$ entonces $\perp \in \Re^n(S)$. Esto se puede demostrar suponiendo que $S$ es insatisfacible, en ese caso existe un subconjunto finito $H$ de $\mathscr{H}_S$ que es insatisfacible. Este $H$ al ser un subconjunto de la saturación de $S$ sobre $\mathscr{H}_S$ está conformado por fórmulas bien formadas de $S$ saturadas con términos fijos de $\mathscr{H}_S$.  Sea $P$ dicho subconjunto de $\mathscr{H}_S$, entonces la saturación de $S$ sobre $P$ incluye a $H$ y por esta razón es también inconsistente.
 Este conjunto es un conjunto de cláusulas fijas, por tanto, para algún $n$ se cumple que $\perp \in \Re^n(S)$. Adicionalmente, apoyándonos del corolario anterior el cual afirma $\Re^n(P((S))) \subseteq P((\Re^n(S)))$, obtenemos que $\perp \in P((\Re^n(S)))$. Nótese que la operación de saturación no puede producir la cláusula vacía si $\perp \in P((\Re^n(S)))$, es decir, $\perp \in \Re^n(S)$. De forma similar y utilizando lemas adicionales se puede demostrar que si $S$ es refutable, es decir, $¬S \stackrel{*}{\longrightarrow} \perp$. Entonces $S$ es deducible ($\vdash S$).
 ## Decidibilidad del Cálculo de Predicados
 Mediante esta serie de teoremas y demostraciones probamos que $\mathcal{P}$ es sano, completo y consistente. Sin embargo, $\mathcal{P}$ no es decidible dado que el universo de Herbrand de un lenguaje puede ser infinito si contiene al menos una constante y una letra funcional. Además, el procedimiento de computación que hemos desarrollado no provee un método decisorio.
